--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "palestras-api",
   "version": "1.0.0",
   "description": "Organizador de palestras por horario",
-  "main": "server.js",
+  "main": "src/server.js",
+  "scripts": {
+    "dev": "nodemon"
+  },
   "author": "Kleisson <kleissonsilva.m@hotmail.com>",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.26.0",
     "mongoose": "^5.9.18",
     "multer": "^1.4.2"
   },
