--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "version": "1.0.0",
   "description": "Organizador de palestras por horario",
   "main": "src/server.js",
-  "scripts": {
-    "dev": "nodemon"
-  },
   "author": "Kleisson <kleissonsilva.m@hotmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon --ignore __tests__",
+    "test": "jest"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.26.0",
     "mongoose": "^5.9.18",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "sequelize": "^5.21.13"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "jest": "^26.0.1",
+    "nodemon": "^2.0.4",
+    "sequelize-cli": "^5.5.1",
+    "supertest": "^4.0.2"
   }
 }
