--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "express": "^4.17.1",
     "moment": "^2.26.0",
     "mongoose": "^5.9.18",
-    "multer": "^1.4.2",
-    "sequelize": "^5.21.13"
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "jest": "^26.0.1",
     "nodemon": "^2.0.4",
-    "sequelize-cli": "^5.5.1",
     "supertest": "^4.0.2"
   }
 }
